[package]
name = "mangayomu-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "sync"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.0.2" }
serde-querystring = "0.2.0"
serde = "1.0.164"
http = "0.2.9"
regex = "1.8.4"
request-handler = { path = "../../packages/request-handler"}
reqwest = { version = "0.11.18", features = ["json"] }
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
redis = { version = "0.23.0", features = ["tokio-comp", "tls-native-tls"] }
nanoid = "0.4.0"
argon2 = "0.5.0"
mongodb = { version = "2.6.0", features = ["tokio-runtime"] }
futures = "0.3"
jsonwebtoken = "8.3.0"
chrono = "0.4"

# You can specify a library for shared logic here (optional)
[lib]
path = "./lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "rust"
path = "api/v1/rust.rs"

[[bin]]
name = "register"
path = "api/v1/register.rs"

[[bin]]
name = "auth"
path = "api/v1/auth.rs"

[[bin]]
name = "session"
path = "api/v1/session.rs"

# [[bin]]
# name = "_id_"
# path = "api/user/[id].rs"

# [[bin]]
# name = "_input_"
# path = "api/fib/[input].rs"

# Note that you need to provide unique names for each binary:
# [[bin]]
# name = "user-id"
# path = "api/user/[id].rs"
#
# [[bin]]
# name = "group-id"
# path = "api/group/[id].rs"